--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 server.port = 8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/daraja_api
+spring.datasource.username= postgres
+spring.datasource.password= data
+
+
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.driver-class-name= org.postgresql.Driver
